# nobetci-algoritma

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJE_RAPORU.txt  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/core/: config.py
app/schemas/: __init__.py  schedule.py  (+1 more)
docs/: FRONTEND_AI_PROMPT.md
scripts/: analyze_base_plus_2.py  debug_exact_scenario.py  debug_fairness.py  debug_forbidden_transition.py  demo_random_scenario.py  run_realistic_tests.py  test_fairness_detailed.py  test_latest_production.py  test_per_type_fairness.py  test_production_json.py  test_production_request.py  test_realistic_unavailability.py
test_outputs/: SUMMARY.txt  _base_plus_2_log.txt  _run_log.txt  all_statistics.json  ao_extreme_request.json  ao_extreme_response.json  ao_realistic_request.json  ao_realistic_response.json  base2_restored.txt  base_plus1_test.txt  base_plus_2_analysis.json  base_plus_2_forced.json  base_plus_2_multi_bottleneck.json  fairness_fixed.txt  fairness_minmax.txt  fairness_result.txt  fairness_symmetric.txt  fairness_total150k.txt  latest_comparison.txt  na_extreme_request.json  na_extreme_response.json  na_realistic_request.json  na_realistic_response.json  per_type_detailed.txt  per_type_fairness.txt  production_local.txt  realistic_cat_first.txt  realistic_heavy_closer.txt  realistic_unavail.txt  simplified_penalty.txt  with_hint.txt
tests/: test_api.py  test_clustered_unavailability.py  test_comprehensive.py  test_comprehensive_algorithms.py  test_scheduler_senior.py
(+8 files in other folders)
